# transctrl

./: Dockerfile  Dockerfile.test  LICENSE.md  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: docker-publish.yml
client/: transctrl_client.py
examples/: docker-compose.proxy.yml  docker-compose.yml  example_usage.py
proto/: transctrl.proto
scripts/: run-integration-tests.sh
src/: __init__.py  config.py  docker_client.py  rate_limiter.py  reconciler.py  server.py  transctrl_pb2.py  transctrl_pb2_grpc.py
tests/: test_reconciler.py
tests/integration/: test_container_lifecycle.py
