[project]
name = "transctrl"
version = "0.1.0"
description = "A secure service that manages Transmission Docker containers declaratively via gRPC over Unix sockets"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "docker>=7.0.0",
    "grpcio>=1.76.0",
    "grpcio-tools>=1.76.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
]
